<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, LoginActivity!</string>
    <string name="app_name">Hey guys!</string>
    
    <string name="yes">Yes</string>
    <string name="no">No</string>
    
    <!-- tabs -->
    <string name="home">Home</string>
    <string name="friends">Friends</string>
    <string name="following">Following</string>
    <string name="places">Places</string>
    <string name="me">Me</string>
    <string name="profile">Profile</string>
    <string name="change_account">Change Account</string>
    <string name="refresh">Refresh</string>
    <string name="all_friends">All Friends</string>
    <string name="find_me">Find Me</string>
    <string name="search">Search</string>
    
    <string name="search_places">Search Places</string>
    <string name="choose_place_type">Choose your place type</string>
    <string name="range_label">Range:</string>
    <string name="meters">meters</string>
    
    <string name="road">Road</string>
    <string name="satellite">Satellite</string>

	<!-- Buttons -->    
    <string name="login">Login</string>
    <string name="registerAccount">Register New Account</string>

    <!-- Input fields -->
    <string name="userPicture">Select your picture</string>
    <string name="fullName">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <!-- Labels and texts -->
    <string name="noHasAccount">New to Hey guys? Register here</string>
    <string name="hasAccount">Already has account! Login here</string>
    
    <!-- Required and Validations -->
    <string name="pictureRequired">A picture is required.</string>
    <string name="nameRequired">Full name is required.</string>
    <string name="emailRequired">Email is required.</string>
    <string name="passwordRequired">Password is required.</string>

    <string name="invalidEmail">Invalid email addresss.</string>
    <string name="incorrectEmailPassword">Incorrect email or password.</string>

    <string name="registrationError">An registration error occurred.</string>

    <string name="disableGPS">Your GPS seems to be disabled</string>
    <string name="enableGPS">Do you want to enable it?</string>
    
    <string name="confirmCheckin">Confirm your checkin?</string>
    <string name="checkinSuccess">Checkin registered.</string>
    <string name="checkinError">An checkin location error occurred.</string>
    
    <string name="serverNotResponding">The server is not responding. Try again in a while.</string>
</resources>
