<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff" >

        <!-- Header -->
        <include
         	layout="@layout/header"
         	android:layout_height="wrap_content"
         	android:layout_width="fill_parent"/>

        <!-- Footer -->
		<include
         	layout="@layout/footer"
         	android:layout_height="wrap_content"
         	android:layout_width="fill_parent"
         	android:layout_alignParentBottom="true"/>

        <!-- Login Form -->
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/header"
            android:gravity="fill"
            android:orientation="vertical"
            android:padding="10dip" >

            <AbsoluteLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_weight="0.86"
                android:layout_height="0dip"
                android:background="@drawable/template_login" >

                <ImageView
                    android:id="@+id/userPicture"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_x="10dp"
                    android:layout_y="42dp"
                    android:background="@drawable/no_image" />

                <Button
                    android:id="@+id/selectPicture"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="32dip"
                    android:layout_x="104dp"
                    android:layout_y="95dp"
                    android:text="@string/userPicture"
                    android:textColor="#0b84aa"
                    android:textSize="16dip" />

            </AbsoluteLayout>

            <!-- Full Name Label -->
		  	<EditText android:id="@+id/registerName" 
		  		android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:layout_marginBottom="10dip"
		  		android:layout_marginTop="10dip"
		  		android:hint="@string/fullName"
		  		android:singleLine="true"
		  		/>
            
            <!-- Email Label -->
            <EditText
                android:id="@+id/registerEmail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:singleLine="true"
                />

            <!-- Password Label -->
            <EditText
                android:id="@+id/registerPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:singleLine="true"
                />

            <!-- Register Button -->		
		  	<Button android:id="@+id/btnRegister" 
		  		android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:layout_marginTop="10dip"
		  		android:text="@string/registerAccount"/>
			<!-- Link to Login Screen -->
			<TextView android:id="@+id/link_to_login" 
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="40dip"
				android:layout_marginBottom="40dip"
				android:text="@string/hasAccount"
				android:gravity="center"
				android:textSize="20dip"
				android:textColor="#025f7c"/>
        </LinearLayout>
        <!-- Registration Form Ends -->

    </RelativeLayout>
</ScrollView>