<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true">
  <RelativeLayout 
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content" android:background="#ffffff">

  		<!-- Header -->
        <include
         	layout="@layout/header"
         	android:layout_height="wrap_content"
         	android:layout_width="fill_parent"/>

        <!-- Footer -->
		<include 
         	layout="@layout/footer"
         	android:layout_height="wrap_content"
         	android:layout_width="fill_parent"
         	android:layout_alignParentBottom="true"/>

  		<!-- Login Form -->
		<LinearLayout
		  xmlns:android="http://schemas.android.com/apk/res/android"
		  android:orientation="vertical"
		  android:layout_width="match_parent"
		  android:layout_height="wrap_content"
		  android:padding="10dip"
		  android:layout_below="@id/header">
		  <!--  Email Label -->
		  <TextView
		      	android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:textColor="#372c24"
		  		android:text="@string/email"/>
		  <EditText
		        android:id="@+id/loginEmail"  
		      	android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:layout_marginTop="5dip"
		  		android:layout_marginBottom="20dip"
		  		android:inputType="textEmailAddress"
		  		android:singleLine="true"/>
		  <!--  Password Label -->
		  <TextView 
		      	android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:textColor="#372c24"
		  		android:text="@string/password"/>
		  <EditText
		      	android:id="@+id/loginPassword" 
		      	android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:layout_marginTop="5dip"
		  		android:singleLine="true"
		  		android:inputType="textPassword"/>

		  <!-- Login button -->	
		  <Button android:id="@+id/btnLogin" 
		  		android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:layout_marginTop="10dip"
		  		android:text="@string/login"/>
		  
		  <!-- Link to Registration Screen -->		
		  <TextView android:id="@+id/link_to_register" 
		  		android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:layout_marginTop="40dip"
		  		android:layout_marginBottom="40dip"
		  		android:text="@string/noHasAccount"
		  		android:gravity="center"
		  		android:textSize="20dip"
		  		android:textColor="#0b84aa"/>
		    
		</LinearLayout>
  		<!-- Login Form Ends --> 		
  		
  </RelativeLayout>
</ScrollView>
